--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,16 @@
             <artifactId>kotlin-stdlib-jdk8</artifactId>
             <version>1.8.10</version>
         </dependency>
+        <dependency>
+            <groupId>io.github.microutils</groupId>
+            <artifactId>kotlin-logging-jvm</artifactId>
+            <version>2.0.11</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.6</version>
+        </dependency>
     </dependencies>
 
 </project>
